# vla-teleop-franka-v2

./: .gitignore  .gitmodules  CMakeLists.txt  CONTROL_DESIGN.md  DOCS.md  FRANKA_BUFFERING.md  IMPROVEMENTS.md  INSTALL.md  QUEST3_CONNECTION.md  QUEST3_REAL_TESTING.md  QUEST3_SIMULATION_TESTING.md  README.md  test.md
franka-sanity-checks/: INSTALL.md  README.md
franka-sanity-checks/scripts/: check_gripper.sh  safe_ee_translate.sh
franka-sanity-checks/src/: main.cpp
franka_xr_teleop/: 1.jsonl  2.jsonl  3.jsonl  CMakeLists.txt  DATA_COLLECTION.md  QUEST3_PORT_PLAN.md  README.md
franka_xr_teleop/configs/: data_collection.yaml  robot.yaml  safety.yaml  teleop.yaml  xr_frame.yaml
franka_xr_teleop/cpp/teleop_bridge/: CMakeLists.txt  common_types.h  config_loader.cpp  config_loader.h  franka_controller.cpp  franka_controller.h  gripper.cpp  gripper.h  main.cpp  math_utils.h  observation_pub.cpp  observation_pub.h  offline_qcmd_validator.cpp  safety.cpp  safety.h  teleop_mapper.cpp  teleop_mapper.h  teleop_state_machine.cpp  teleop_state_machine.h  trace_logger.cpp  trace_logger.h  xr_receiver.cpp  xr_receiver.h  xrobotics_source.cpp  xrobotics_source.h
franka_xr_teleop/cpp/teleop_bridge/tests/: config_loader_test.cpp  safety_mapper_test.cpp
franka_xr_teleop/schemas/: robot_observation.schema.json  xr_command.schema.json
franka_xr_teleop/teleop_trace/: planner_trace.csv
franka_xr_teleop/teleop_trace/2/: planner_trace.csv
franka_xr_teleop/teleop_trace/run_01/: planner_trace.csv  rt_trace.csv
franka_xr_teleop/teleop_trace/run_02/: planner_trace.csv
franka_xr_teleop/teleop_trace/run_03_lpf_cutoff_freq_40/: rt_trace.csv
franka_xr_teleop/teleop_trace/run_03_lpf_cutoff_freq_40#/: planner_trace.csv
franka_xr_teleop/teleop_trace/run_04/: planner_trace.csv
franka_xr_teleop/tools/: align_robot_camera_jsonl.py  inspect_xr_packets.py  live_teleop_debug.py  plot_teleop_trace.py  record_data_collection_session.py  record_realsense_camera.py  record_robot_observations.py  record_zed_camera.py  replay_teleop_session.py
franka_xr_teleop/traces/run_01/: planner_trace.csv
franka_xr_teleop/traces/run_02/: planner_trace.csv
src/: main.cpp
